fix btn text contrast

--- a/react/src/components/search/search.css
+++ b/react/src/components/search/search.css
@@ -28,7 +28,7 @@
     padding: 6px 8px;
 }
 .search-form-submit{
-    color: #fff;
+    color: #1d0029;
     background: #f4a22d;
 }
 #search-form-address {
